--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,16 @@
         </header>
     </div>
 
+<div>
+<ul>
+  {% for p in site.pages %}
+    <li>
+      <a href="{{ p.url }}">{{ p.title }}</a>
+    </li>
+  {% endfor %}
+</ul>
+</div>
+
     <!-- MAIN CONTENT -->
     <div>
         {{content}}
