--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
         </header>
     </div>
 
+<!-- menu -->
 <div>
 <ul>
   {% for p in site.pages %}
@@ -37,6 +38,8 @@
     <div>
         {{content}}
     </div>
+
+
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
