--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 <ul>
   {% for p in site.pages %}
     <li>
-      <a href="{{ p.url }}">{{ p.title }}</a>
+      <a href="{{ site.baseurl }}/{{ p.url }}">{{ p.title }}</a>
     </li>
   {% endfor %}
 </ul>
