--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         <ul>
           {% for p in site.pages %}
             <li>
-              <a href="{{ site.baseurl }}/{{ p.url }}">{{ p.title }}</a>
+              <a href="{{ site.baseurl }}{{ p.url }}">{{ p.title }}</a>
             </li>
           {% endfor %}
         </ul>
