--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/sudhirshakya/abc">View on GitHub</a>
 
-          <h1 id="project_title">Abc</h1>
+          <h1 id="project_title">Computer Programming</h1>
           <h2 id="project_tagline"></h2>
         </header>
     </div>
@@ -45,7 +45,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Abc maintained by <a href="https://github.com/sudhirshakya">sudhirshakya</a></p>
+        <p class="copyright">Maintained by <a href="https://github.com/sudhirshakya">Sudhir Shakya</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
